Remove readString since it requires java11